# confidential-computing-cvm-guest-attestation

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  autoGeneratedMAAReport.sh  cvm-guest-attestation.md
azure-protected-vm-secrets/: .gitignore  AesWrapper.h  BaseX509.h  BcryptError.h  CMakeLists.txt  CommonTypes.h  DebugInfo.cpp  DebugInfo.h  DynamicSecretsProvisioningLibrary.nuspec  ECDiffieHellman.h  HKDF.h  HclReportParser.cpp  HclReportParser.h  JsonWebToken.cpp  JsonWebToken.h  LibraryLogger.cpp  LibraryLogger.h  Policy.cpp  Policy.h  README.md  ReturnCodes.h  SecretsProvisioningLibrary.cpp  SecretsProvisioningLibrary.h  SecretsProvisioningLibrary.nuspec  SecretsProvisioningLibrary.sln  SecretsProvisioningLibrary.vcxproj  System.cpp  System.h  Tpm.cpp  Tpm.h  TpmError.h  Tss2LogController.h  Tss2Wrapper.cpp  Tss2Wrapper.h  TssCtx.cpp  TssCtx.h  Version.cpp  build.sh  dirs.proj
azure-protected-vm-secrets/CvmHelper/: dirs.proj
azure-protected-vm-secrets/CvmHelper/CvmHelperStatic/: CvmHelperStatic.vcxproj  dirs.proj
azure-protected-vm-secrets/CvmHelper/CvmHelperTest/: CvmHelperTest.vcxproj  dirs.proj  test.cpp
azure-protected-vm-secrets/CvmHelper/inc/: CvmHelper.h
azure-protected-vm-secrets/CvmHelper/src/: CvmHelper.cpp
azure-protected-vm-secrets/DynamicSecretsProvisioningLibrary/: CMakeLists.txt  DynamicSecretsProvisioningLibrary.vcxproj  dirs.proj  dllmain.cpp  pySecretsProvisioningLibrary.py
azure-protected-vm-secrets/DynamicSecretsProvisioningLibrary/python/: setup.py
azure-protected-vm-secrets/DynamicSecretsProvisioningLibrary/python/azure_protected_vm_secrets/: __init__.py  lib.py
azure-protected-vm-secrets/DynamicSecretsProvisioningSample/: CMakeLists.txt  DynamicSecretsProvisioningSample.vcxproj  dirs.proj  packages.config
azure-protected-vm-secrets/Linux/: OsslAesWrapper.cpp  OsslAesWrapper.h  OsslECDiffieHellman.cpp  OsslECDiffieHellman.h  OsslError.h  OsslHKDF.cpp  OsslHKDF.h  OsslX509.cpp  OsslX509.h  Version.h.in
azure-protected-vm-secrets/SecretsProvisioningFunctionalityTest/: CMakeLists.txt  SecretsProvisioningFunctionalityTest.vcxproj  packages.config  test.cpp
azure-protected-vm-secrets/SecretsProvisioningSample/: CMakeLists.txt  CMakeLists.txt.bak  SecretsProvisioningSample.cpp  SecretsProvisioningSample.h  SecretsProvisioningSample.vcxproj  cli_common.cpp  cli_common.h  cmd_is_cvm.cpp  cmd_is_cvm.h  cmd_is_secrets_enabled.cpp  cmd_is_secrets_enabled.h  cmd_unprotect_secret.cpp  cmd_unprotect_secret.h  cmd_validate_imds.cpp  cmd_validate_imds.h  dirs.proj  main.cpp
azure-protected-vm-secrets/SecretsProvsioningUT/: BcryptTests.cpp  CMakeLists.txt  ErrorMessageTest.cpp  JwtTests.cpp  PolicyTests.cpp  SecretsProvsioningUT.vcxproj  SigningTests.cpp  SystemTests.cpp  TestCertConstants.h  TpmMocks.cpp  TpmMocks.h  VersionTest.cpp  dirs.proj  pch.h  test.cpp
azure-protected-vm-secrets/Windows/: BcryptAesWrapper.cpp  BcryptAesWrapper.h  BcryptECDiffieHellman.cpp  BcryptECDiffieHellman.h  BcryptHKDF.cpp  BcryptHKDF.h  Library.props  Version.h  WincryptX509.cpp  WincryptX509.h
azure-protected-vm-secrets/azure-protected-secrets-tool/: CMakeLists.txt  azure-protected-secrets-tool.vcxproj  dirs.proj  packages.config
azure-protected-vm-secrets/azure-protected-secrets-tool/tests/: AzureProtectedSecretsToolTest.vcxproj  CMakeLists.txt  dirs.proj  test_cli_common.cpp  test_cmd_is_cvm.cpp  test_cmd_unprotect_secret.cpp
azure-protected-vm-secrets/nuget/: SecretsProvisioningLibDeps-vcpkg.All.x64.nuspec  SecretsProvisioningLibDeps-vcpkg.All.x64.targets
client-library/src/Attestation/: CMakeLists.txt  build.sh  build_x86_64.sh  enable-insider-fast-repo.sh  pre-requisites-azure-local.sh  pre-requisites.sh  run_tests.sh
client-library/src/Attestation/AttestationClient/: AttestationHelper.cpp  AttestationHelper.h  AttestationHelperBase64.cpp  AttestationHelperJson.cpp  CMakeLists.txt
client-library/src/Attestation/AttestationClient/lib/: AttestationClient.cpp  AttestationClientImpl.cpp  AttestationClientImpl.h  AttestationLibTelemetry.cpp  AttestationLibTelemetry.h  AttestationLibUtils.cpp  AttestationLibUtils.h  AttestationParameters.cpp  AttestationParameters.h  CMakeLists.txt  HclReportParser.cpp  HclReportParser.h  HttpClient.cpp  HttpClient.h  ImdsClient.cpp  ImdsClient.h  ImdsOperations.cpp  ImdsOperations.h  IsolationInfo.cpp  IsolationInfo.h  Logging.cpp  Logging.h  NativeConverter.cpp  NativeConverter.h  TdxAttestationUtils.h  TpmCertOperations.cpp  TpmCertOperations.h  TpmInfo.cpp  TpmInfo.h  TpmUnseal.cpp  TpmUnseal.h
client-library/src/Attestation/AttestationClient/tests/: CMakeLists.txt
client-library/src/Attestation/LinuxTpm/: .gitignore  CMakeLists.txt
client-library/src/Attestation/LinuxTpm/include/: AttestationTypes.h  ExceptionUtil.h  Exceptions.h  MemoryUtil.h  Tpm.h  Tpm2Logger.h  TssWrapper.h
client-library/src/Attestation/LinuxTpm/lib/: CMakeLists.txt  (+12 more)
cvm-attestation-sample-app/: AttestationClientApp.vcxproj  CMakeLists.txt  ClientLibBuildAndInstallAzureLocal.sh  Logger.cpp  OneClickAttest.sh  OneClickLibInstall.sh  README.md  main.cpp  packages.config  vcpkg.json
cvm-attestation-sample-app/dashboard/: app.py  requirements.txt  run.sh
cvm-securekey-release-app/: AttestationUtil.cpp  AttestationUtil.h  CMakeLists.txt  Constants.h  Dockerfile  Dockerfile.azurelinux  Logger.cpp  Logger.h  Main.cpp  README.md  vcpkg.json
tdx-attestation-app/: .gitignore  ATTEST.md  CMakeLists.txt  HttpClient.cpp  HttpClient.h  Logger.cpp  README  README.md  Utils.cpp  Utils.h  config.json  install.sh  maa_config.json  main.cpp  suse_install.sh
tdx-attestation-app/package/: azguestattestation1-1.0.3-2.x86_64.rpm  azguestattestation1-1.0.5-2.x86_64.rpm  azguestattestation1_1.0.3_amd64.deb  azguestattestation1_1.0.3_amd64_old.deb  azguestattestation1_1.0.5_amd64.deb
tdx-attestation-app/sample_claims/: claims.json
tdx-attestation-app/src/: AttestClient.cpp  AttestClient.h  HttpClient.cpp  HttpClient.h  Logger.h  Utils.h
tdx-attestation-app/tests/: AttestClient_Test.cpp  CMakeLists.txt  Utils_Test.cpp  build.sh  main.cpp
(+92 files in other folders)
